# agnetic-voice-illusion

./: README.md  index.html
agent-backend/: .gitignore  README.md  agent_input.json  pyproject.toml  test_crew.py  user_input.json
agent-backend/knowledge/: Agents.md
agent-backend/src/agent_backend/: crew.py  main.py
agent-backend/src/agent_backend/config/: agents.yaml  tasks.yaml
agent-backend/src/agent_backend/tools/: custom_tool.py
