[project]
name = "agent_backend"
version = "0.1.0"
description = "agent-backend using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "async>=0.6.2",
    "crewai[tools]==1.9.3",
    "fastapi>=0.135.3",
    "pydantic>=2.11.10",
]

[project.scripts]
agent_backend = "agent_backend.main:run"
run_crew = "agent_backend.main:run"
train = "agent_backend.main:train"
replay = "agent_backend.main:replay"
test = "agent_backend.main:test"
run_with_trigger = "agent_backend.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
